# SimpleRender

./: .gitignore  CMakeLists.txt  README.md  SimpleRender.sln
GT/: GT.vcxproj  GT.vcxproj.filters
SimpleRender/: CMakeLists.txt  SimpleRender.cpp  SimpleRender.vcxproj  SimpleRender.vcxproj.filters
SimpleRender/common/: FVertex.cpp  FVertex.hpp  Frag.cpp  Frag.hpp  Info.cpp  Info.hpp  Info.inl  Point.cpp  Point.hpp  Vertex.cpp  Vertex.hpp  Vertex.inl  setup.hpp
SimpleRender/format/: Parser.cpp  Parser.hpp  scf_parser.hpp
SimpleRender/geometry/: Shape2D.cpp  Shape2D.hpp  Shape3D.cpp  Shape3D.hpp  Triangle2D.cpp  Triangle2D.hpp  Triangle2D.inl  Triangle3D.cpp  Triangle3D.hpp  Triangle3D.inl
SimpleRender/main/: SimpleDelegate.cpp  SimpleDelegate.hpp  SimpleRender.cpp
SimpleRender/material/: FITexture.cpp  FITexture.hpp  Hsv.cpp  Hsv.hpp  Rgba.cpp  Rgba.hpp  Rgba.inl  Texture.hpp  color.cpp  color.hpp  color.inl
SimpleRender/math/: Basic.hpp  Basic.inl  TMatrix.hpp  TMatrix_Gl.hpp  TMatrix_Gl.inl  TMatrix_Rotate.hpp  TMatrix_Rotate.inl  TMatrix_Trans.hpp  TMatrix_Trans.inl  TVector.hpp  TVector_Trans.hpp  TVector_Trans.inl  basic.cpp  basic.hpp  basic.inl  tmatrix.hpp  tmatrix_gl.hpp  tmatrix_rotate.hpp  tmatrix_trans.hpp  tvector.hpp  tvector_trans.hpp
SimpleRender/media/: cube.scj
SimpleRender/mesh/: Container.cpp  Container.hpp  Container.inl  Cube.cpp  Cube.hpp  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp  shape.hpp  sphere.cpp
SimpleRender/pipeline/: BSPTree.cpp  BSPTree.hpp  BSPTree.inl  BlendOptions.cpp  BlendOptions.hpp  FragShader.hpp  MyFragShader.cpp  MyFragShader.hpp  MyVertexShader.cpp  MyVertexShader.hpp  Pipeline.cpp  Pipeline.hpp  Pipeline.inl  RenderSetup.hpp  RenderState.cpp  RenderState.hpp  VertexShader.hpp  blend.cpp  blend.hpp  bsp.hpp  frag_shader.cpp  frag_shader.hpp  gl_utils.hpp  raster_stage.hpp  render_state.cpp  render_state.hpp  render_struc.hpp  stage_flow.cpp  stage_flow.hpp  stage_struc.hpp  vertex_shader.cpp  vertex_shader.hpp
SimpleRender/platform/: Form.hpp  FrameBuffer.cpp  FrameBuffer.hpp  FrameBuffer.inl  WinForm.cpp  WinForm.hpp  framebuffer.hpp  uniform.hpp  winbuffer.cpp  winform.cpp
SimpleRender/raster/: FITexture.cpp  Frag.hpp  Frag.inl  FragCache.cpp  FragCache.hpp  Line.cpp  Line.hpp  Line.inl  Point.cpp  Point.hpp  Point.inl  Raster.cpp  Raster.hpp  Texture.hpp  Triangle.cpp  Triangle.hpp
SimpleRender/util/: func.hpp  type_def.hpp
SimpleRenderTests/: CMakeLists.txt  SimpleRenderTests.cpp  SimpleRenderTests.vcxproj  SimpleRenderTests.vcxproj.filters
SimpleRenderTests/basic/: CMakeLists.txt  SimpleRenderTests.cpp
