set(SOURCE_FILES
        format/scf_parser.hpp
        geometry/Triangle.hpp
        main/SimpleDelegate.cpp
        main/SimpleDelegate.hpp
        main/SimpleRender.cpp
        material/color.cpp
        material/color.hpp
        math/basic.cpp
        math/basic.hpp
        math/tmatrix.hpp
        math/tmatrix_gl.hpp
        math/tmatrix_rotate.hpp
        math/tmatrix_trans.hpp
        math/tvector.hpp
        math/tvector_trans.hpp
        mesh/shape.hpp
        mesh/sphere.cpp
        pipeline/blend.cpp
        pipeline/blend.hpp
        pipeline/bsp.cpp
        pipeline/bsp.hpp
        pipeline/frag_shader.cpp
        pipeline/frag_shader.hpp
        pipeline/gl_utils.hpp
        pipeline/raster_stage.hpp
        pipeline/render_state.cpp
        pipeline/render_state.hpp
        pipeline/render_struc.hpp
        pipeline/stage_flow.cpp
        pipeline/stage_flow.hpp
        pipeline/vertex_shader.cpp
        pipeline/vertex_shader.hpp
        platform/framebuffer.hpp
        platform/uniform.hpp
        platform/winbuffer.cpp
        platform/winform.cpp
        raster/Frag.hpp
        raster/FragCache.cpp
        raster/FragCache.hpp
        raster/Line.hpp
        raster/Point.hpp
        raster/Texture.hpp
        raster/Triangle.hpp
        third/FreeImage.h
        third/FreeImagePlus.h
        util/func.hpp
        raster/FITexture.cpp)

add_executable(SimpleRender ${SOURCE_FILES})

target_link_libraries(SimpleRender -lFreeImage)